--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,27 @@ body {
     rgba(0, 150, 0, 0.75), black 120%
   );
   height: 100vh;
-
   color: white;
   font: 1.3rem Inconsolata, monospace;
+}
+
+a {
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:link {
+  color: aqua;
+}
+
+a:visited {
+  color: fuchsia;
+}
+
+a:hover {
+  color: yellow;
+}
+
+a:active {
+  color: yellow;
 }
