--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,50 +1,52 @@
 /* some style */
 
 /*Title H1 H2 H3 style*/
-#content {
-    color: black;
-    Font: 0.875em/1.5em "Microsoft YaHei", "ptsans", "Arial", sans serif;
-    font-size: 16px;
+body {
+	Font: 0.875em/1.5em "Microsoft YaHei", "ptsans", "Arial", sans serif;
+	font-size: 12px;
 }
-#content h1 {
-    background: #2B6695;
-    border-radius: 6px 6px 6px 6px;
-    box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
-    color: #FFFFFF;
-    Font family: "Microsoft YaHei", "Tahoma", "boldface", Arial;
-    font-size: 18px;
-    font-weight: bold;
-    height: 25px;
-    line-height: 25px;
-    margin: 18px 0 !important;
-    padding: 8px 0 5px 5px;
-    text-shadow: 2px 2px 3px #222222;
+
+h1 {
+	background: #2B6695;
+	border-radius: 6px 6px 6px 6px;
+	box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+	color: #FFFFFF;
+	Font family: "Microsoft YaHei", "Tahoma", "boldface", Arial;
+	font-size: 18px;
+	font-weight: bold;
+	height: 25px;
+	line-height: 25px;
+	margin: 18px 0 !important;
+	padding: 8px 0 5px 5px;
+	text-shadow: 2px 2px 3px #222222;
 }
-#content h2 {
-    background: #2B6600;
-    border-radius: 6px 6px 6px 6px;
-    box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
-    color: #FFFFFF;
-    Font family: "Microsoft YaHei", "Tahoma", "boldface", Arial;
-    font-size: 15px;
-    font-weight: bold;
-    height: 24px;
-    line-height: 23px;
-    margin: 12px 0 !important;
-    padding: 5px 0 5px 10px;
-    text-shadow: 2px 2px 3px #222222;
+
+h2 {
+	background: #2B6600;
+	border-radius: 6px 6px 6px 6px;
+	box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+	color: #FFFFFF;
+	Font family: "Microsoft YaHei", "Tahoma", "boldface", Arial;
+	font-size: 15px;
+	font-weight: bold;
+	height: 24px;
+	line-height: 23px;
+	margin: 12px 0 !important;
+	padding: 5px 0 5px 10px;
+	text-shadow: 2px 2px 3px #222222;
 }
-#content h3 {
-    background: #5B9600;
-    border-radius: 6px 6px 6px 6px;
-    box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
-    color: #FFFFFF;
-    Font family: "Microsoft YaHei", "Tahoma", "boldface", Arial;
-    font-size: 13px;
-    font-weight: bold;
-    height: 24px;
-    line-height: 20px;
-    margin: 12px 0 !important;
-    padding: 5px 0 5px 10px;
-    text-shadow: 2px 2px 3px #222222;
+
+h3 {
+	background: #5B9600;
+	border-radius: 6px 6px 6px 6px;
+	box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+	color: #FFFFFF;
+	Font family: "Microsoft YaHei", "Tahoma", "boldface", Arial;
+	font-size: 13px;
+	font-weight: bold;
+	height: 24px;
+	line-height: 20px;
+	margin: 12px 0 !important;
+	padding: 5px 0 5px 10px;
+	text-shadow: 2px 2px 3px #222222;
 }
